# svg-rasterizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib184/: CMakeLists.txt  application.cpp  application.hpp  color.cpp  color.hpp  image.hpp
lib184/glad/: README.md
lib184/glad/include/glad/: glad.h
lib184/glad/src/: glad.c
src/: RasterSVG.cpp  main.cpp  rasterizer.hpp  svg.cpp  svg.h  svgparser.cpp  svgparser.h  triangulation.cpp  triangulation.h
src/renderers/: line.cpp  line.hpp  pipeline.hpp  texture.cpp  texture.h
